; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/dc01/left/extr_i2c.c_i2c_slave_init.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/dc01/left/extr_i2c.c_i2c_slave_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TWAR = common dso_local global i32 0, align 4
@TWIE = common dso_local global i32 0, align 4
@TWEA = common dso_local global i32 0, align 4
@TWINT = common dso_local global i32 0, align 4
@TWEN = common dso_local global i32 0, align 4
@TWCR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i2c_slave_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = shl i32 %3, 0
  store i32 %4, i32* @TWAR, align 4
  %5 = load i32, i32* @TWIE, align 4
  %6 = shl i32 1, %5
  %7 = load i32, i32* @TWEA, align 4
  %8 = shl i32 1, %7
  %9 = or i32 %6, %8
  %10 = load i32, i32* @TWINT, align 4
  %11 = shl i32 1, %10
  %12 = or i32 %9, %11
  %13 = load i32, i32* @TWEN, align 4
  %14 = shl i32 1, %13
  %15 = or i32 %12, %14
  store i32 %15, i32* @TWCR, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
